--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,17 +1,7 @@
 ﻿@page
-@model MyRazorApp.Pages.IndexModel
+@model IndexModel
+@{
+    ViewData["Title"] = "Bem vindos!";
+}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Razor Page</title>
-</head>
-<body>
-    <div>
-        @for (var i = 0; i <= 10; i++)
-        {
-            <p>Item @i</p>
-        }
-    </div>
-</body>
-</html>
+<h1>Home</h1>
